# tgbot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README_CN.md  agent.yaml  docker-agent.Dockerfile  docker-compose.yml  example_config.yaml  go.mod  go.sum  podman-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: sync.yml
ai-service/: Dockerfile  main.py  requirements.txt
cmd/bot/: main.go
huggingface_hub/: __init__.pyi  _commit_api.pyi  _commit_scheduler.pyi  _login.pyi  _upload_large_folder.pyi  _webhooks_payload.pyi  _webhooks_server.pyi  hf_file_system.pyi  hub_mixin.pyi  keras_mixin.pyi  repocard.pyi  repository.pyi
huggingface_hub/commands/: download.pyi  repo_files.pyi  scan_cache.pyi  upload.pyi  version.pyi
huggingface_hub/inference/: _common.pyi
huggingface_hub/serialization/: __init__.pyi  _base.pyi  _torch.pyi
huggingface_hub/utils/: __init__.pyi  _cache_manager.pyi  _datetime.pyi  _experimental.pyi  _fixes.pyi  _hf_folder.pyi  _http.pyi  _pagination.pyi  _paths.pyi  _runtime.pyi  _safetensors.pyi  _subprocess.pyi  _telemetry.pyi  endpoint_helpers.pyi  insecure_hashlib.pyi  tqdm.pyi
internal/ai/: client.go
internal/bot/: bot.go  handlers.go
internal/config/: config.go
internal/sandbox/: client.go
internal/tools/: mcp.go  telegram.go
pod/: podman-deploy.sh  tgbot-bot.container  tgbot-docker-agent.container  tgbot-new-api.container  tgbot-sandbox.container  tgbot.network  vol-new-api-data.volume
sandbox/: Dockerfile  main.py
src/: __main__.py  ai_service_client.py  config.py  hotloader.py  sandbox_client.py
src/ai/: provider.py  tools.py  (+1 more)
telethon/: __init__.pyi  helpers.pyi  hints.pyi  password.pyi  requestiter.pyi  sync.pyi  utils.pyi
tgbot/: __init__.py  __main__.py
(+214 files in other folders)
