[project]
name = "tgbot"
version = "0.1.0"
description = "A Telegram bot project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "hachoir>=3.3.0",
    "openai>=1.61.0",
    "pillow>=11.1.0",
    "portalocker>=3.0.0",
    "regex>=2024.11.6",
    "ruamel-yaml>=0.18.10",
    "telethon>=1.38.1",
]

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]

[tool.hatch.build.targets.wheel]
packages = ["src/tgbot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
