[project]
name = "tgbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "aiohttp>=3.13.5",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "vercel-ai-sdk>=0.0.1.dev10",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]
